# mapviz-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/mapviz-core/: Cargo.toml
crates/mapviz-core/src/: camera.rs  coords.rs  error.rs  frame.rs  geometry.rs  layer.rs  lib.rs  primitive.rs  scene.rs  tessellate.rs  texture.rs
crates/mapviz-data/: Cargo.toml
crates/mapviz-data/src/: lib.rs
crates/mapviz-layers/: Cargo.toml
crates/mapviz-layers/src/: lib.rs
crates/mapviz-render/: Cargo.toml
crates/mapviz-render/src/: circle.wgsl  lib.rs  line.wgsl  mesh.wgsl  quad.wgsl  renderer.rs  tex.wgsl
crates/mapviz-tiles/: Cargo.toml
crates/mapviz-tiles/src/: lib.rs  raster.rs
crates/mapviz-wasm/: Cargo.toml
crates/mapviz-wasm/src/: lib.rs  map.rs
examples/grid/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/grid/src/: main.ts
