[package]
name = "mapviz-render"
description = "The wgpu rendering backend for mapviz and the reference Backend implementation (full 2D + 3D)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mapviz-core.workspace = true
wgpu.workspace = true
glam.workspace = true
thiserror.workspace = true
bytemuck.workspace = true


# Surface creation from an HtmlCanvasElement is web-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }
