[package]
name = "mapviz-tiles"
description = "Tile sources for mapviz: XYZ raster and MVT vector tiles, caching, and LOD."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Decode PNG raster tiles (pulls in the `image` crate's pure-Rust png codec).
png = ["dep:image", "image/png"]

[dependencies]
mapviz-core.workspace = true
image = { workspace = true, optional = true }
# TODO: geozero, prost — vector tile decode (added when MVT sources are implemented).
