[package]
name = "mapviz-wasm"
description = "The wasm-bindgen JS/TS API for mapviz — the only crate that targets wasm32."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mapviz-core.workspace = true
mapviz-render.workspace = true
mapviz-tiles.workspace = true
mapviz-layers.workspace = true
mapviz-data.workspace = true
glam.workspace = true

# The JS interop surface is web-only; keeping it cfg-gated lets the crate still
# compile to an (empty) native lib for CI.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }
console_error_panic_hook.workspace = true
